# health_com

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/api/: health.py  run.py
src/api/v1/: __init__.py  document.py  user.py
src/crew/: agents.py  crew.py  tasks.py  tools.py
src/elastic/: client.py
src/mongo/: client.py
src/schemas/: user.py
src/streamlit/: agent.py  app.py  documents.py  pages.py  utils.py
